# acteon

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  acteon.toml  docker-compose.yml  mkdocs.yml
acteon-audit-elasticsearch/: Cargo.toml
acteon-audit-elasticsearch/src/: lib.rs  store.rs
acteon-client/: Cargo.toml
acteon-client/src/: error.rs  lib.rs
acteon-core/: Cargo.toml
acteon-core/src/: action.rs  caller.rs  context.rs  key.rs  lib.rs  outcome.rs  types.rs
acteon-email/: Cargo.toml
acteon-email/src/: config.rs  lib.rs  provider.rs
acteon-executor/: Cargo.toml
acteon-executor/src/: executor.rs  lib.rs
acteon-gateway/: Cargo.toml
acteon-gateway/benches/: dispatch.rs
acteon-gateway/examples/: basic.rs  multi_provider.rs
acteon-gateway/examples/yaml_rules/: multi_provider.yaml
acteon-gateway/src/: background.rs  builder.rs  error.rs  gateway.rs  lib.rs  metrics.rs
acteon-rules/: Cargo.toml
acteon-rules-cel/: Cargo.toml
acteon-rules-cel/src/: frontend.rs  parser.rs
acteon-rules/benches/: eval.rs
acteon-rules/src/: error.rs  frontend.rs
acteon-rules/src/engine/: builtins.rs  context.rs  executor.rs  mod.rs
acteon-rules/src/ir/: action.rs  expr.rs  rule.rs
acteon-server/: Cargo.toml
acteon-server/src/: audit_factory.rs  config.rs  error.rs  lib.rs  main.rs  state_factory.rs
acteon-server/src/api/: audit.rs  auth.rs  dispatch.rs  events.rs  health.rs  mod.rs  openapi.rs  rules.rs
acteon-server/src/auth/: api_key.rs  config.rs  crypto.rs  jwt.rs  middleware.rs  mod.rs  password.rs
acteon-server/src/ratelimit/: config.rs  limiter.rs  middleware.rs  mod.rs
acteon-server/tests/: api_tests.rs
acteon-state-clickhouse/: Cargo.toml
acteon-state-clickhouse/src/: config.rs  migrations.rs  store.rs
acteon-state-etcd/: Cargo.toml
acteon-state-etcd/src/: config.rs  lib.rs  lock.rs  store.rs
clients/python/: README.md  pyproject.toml
clients/python/acteon_client/: __init__.py  a2a.py  bus.py  bus_models.py  client.py  errors.py  models.py  queues.py  worker.py  workflows.py
clients/python/tests/: test_a2a.py  test_aws_ec2_autoscaling.py  test_bus.py  test_contract.py  test_provider_health.py  test_queues.py  test_signing_keys.py  test_wasm_plugins.py  test_webhook.py  test_worker.py  test_workflows.py
crates/aws/: Cargo.toml
crates/aws/src/: auth.rs  autoscaling.rs  config.rs  ec2.rs  error.rs  eventbridge.rs  lambda.rs  lib.rs  s3.rs  ses.rs  sns.rs  sqs.rs
crates/azure/: Cargo.toml
crates/azure/src/: auth.rs  blob.rs  config.rs  error.rs  eventhubs.rs  lib.rs
crates/blob/: Cargo.toml
crates/blob/src/: error.rs  lib.rs  store.rs  types.rs
crates/bus/: Cargo.toml
crates/bus/src/: backend.rs  config.rs  error.rs  kafka.rs  lib.rs  memory.rs  message.rs  schema.rs
crates/bus/tests/: kafka_integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: a2a.rs  analytics.rs  approvals.rs  audit.rs  aws.rs  azure.rs  bus.rs  chains.rs  circuit_breakers.rs  compliance.rs  coverage.rs  dispatch.rs  dlq.rs  error.rs  events.rs  executions.rs  gcp.rs  groups.rs  lib.rs  plugins.rs  providers.rs  queues.rs  quotas.rs  recurring.rs  retention.rs  rules.rs  signing_keys.rs  silences.rs  stream.rs  streaming.rs  swarm.rs  templates.rs  time_intervals.rs  webhook.rs  workflows.rs
crates/core/: Cargo.toml
crates/core/src/: action.rs  analytics.rs  attachment.rs  bus_agent.rs  bus_agent_card.rs  bus_approval.rs  bus_conversation.rs  bus_schema.rs  bus_stream.rs  bus_subscription.rs  bus_task.rs  bus_tool.rs  bus_topic.rs  chain.rs  chain_dag.rs  circuit_breaker.rs  compliance.rs  coverage.rs  enrichment.rs  error.rs  execution_history.rs  fingerprint.rs  group.rs  lib.rs  outcome.rs  provider_health.rs  quota.rs  recurring.rs  retention.rs  silence.rs  state_machine.rs  stream.rs  task_push.rs  template.rs  tenant_scope.rs  time_interval.rs  types.rs  worker_task.rs  workflow.rs
crates/core/tests/: workflow_contract.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: lib.rs  signing.rs  tls.rs
crates/embedding/: Cargo.toml
crates/embedding/src/: bridge.rs  cache.rs  config.rs  cosine.rs  error.rs  http.rs  lib.rs  metrics.rs  mock.rs  provider.rs
crates/gateway/: Cargo.toml
crates/gateway/benches/: a2a_task_lifecycle.rs
crates/gateway/examples/: basic.rs  multi_provider.rs
crates/gateway/src/: audit_helpers.rs  background.rs  builder.rs  chain.rs  circuit_breaker.rs  encrypting_dlq.rs  enrichment.rs  error.rs  execution.rs  gateway.rs  group_manager.rs  lib.rs  metrics.rs  quota_enforcement.rs  recurring_overlap.rs  silence_enforcement.rs  sync_state.rs  task_chain_bridge.rs  task_engine.rs  task_queue.rs  template_engine.rs  template_management.rs  time_interval_management.rs  watcher.rs  workflow.rs
crates/gateway/tests/: durable_executions.rs  pinned_def_gc.rs  recurring_overlap.rs  task_queues_and_workflows.rs
crates/gcp/: Cargo.toml
crates/gcp/src/: auth.rs  config.rs  error.rs  lib.rs  pubsub.rs  storage.rs
crates/llm/: Cargo.toml
crates/llm/src/: config.rs  error.rs  evaluator.rs  http.rs  lib.rs  mock.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs  prompts.rs  resources.rs  server.rs  tools.rs
crates/ops/: Cargo.toml
crates/ops/src/: config.rs  error.rs  lib.rs  test_rules.rs
crates/provider/: Cargo.toml
crates/provider/src/: context.rs  error.rs  http.rs  lib.rs  log.rs  provider.rs  resource_lookup.rs  trace_context.rs  webhook.rs
crates/server/: Cargo.toml
crates/server/src/: analytics_factory.rs  audit_factory.rs  bus_reconciler.rs  config.rs  error.rs  file_watcher.rs  lib.rs  main.rs  quotas_loader.rs  state_factory.rs  telemetry.rs  templates_loader.rs
crates/server/tests/: api_tests.rs  ui_tests.rs
crates/simulation/: Cargo.toml  README.md
crates/simulation/benches/: bus_kafka_e2e.rs  bus_overhead.rs  throughput.rs
crates/simulation/examples/: a2a_core_simulation.rs  adversarial_swarm_simulation.rs  analytics_simulation.rs  (+71 more)
(+1235 files in other folders)
