[workspace]
resolver = "2"
members = [
    # Core components
    "crates/core",
    "crates/client",
    "crates/server",
    "crates/gateway",
    "crates/simulation",
    "crates/executor",
    "crates/provider",
    "crates/crypto",

    # State backends
    "crates/state/state",
    "crates/state/memory",
    "crates/state/postgres",
    "crates/state/redis",
    "crates/state/dynamodb",
    "crates/state/clickhouse",

    # Audit backends
    "crates/audit/audit",
    "crates/audit/memory",
    "crates/audit/postgres",
    "crates/audit/clickhouse",
    "crates/audit/elasticsearch",

    # Rules frontends
    "crates/rules/rules",
    "crates/rules/yaml",
    "crates/rules/cel",

    # LLM
    "crates/llm",

    # Embedding
    "crates/embedding",

    # Integrations
    "crates/integrations/email",
    "crates/integrations/slack",
    "crates/integrations/pagerduty",
    "crates/integrations/webhook",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/acteon/acteon"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates - Core
acteon-core = { path = "crates/core" }
acteon-client = { path = "crates/client" }
acteon-server = { path = "crates/server" }
acteon-gateway = { path = "crates/gateway" }
acteon-simulation = { path = "crates/simulation" }
acteon-executor = { path = "crates/executor" }
acteon-provider = { path = "crates/provider" }
acteon-crypto = { path = "crates/crypto" }

# State backends
acteon-state = { path = "crates/state/state" }
acteon-state-memory = { path = "crates/state/memory" }
acteon-state-postgres = { path = "crates/state/postgres" }
acteon-state-redis = { path = "crates/state/redis" }
acteon-state-dynamodb = { path = "crates/state/dynamodb" }
acteon-state-clickhouse = { path = "crates/state/clickhouse" }

# Audit backends
acteon-audit = { path = "crates/audit/audit" }
acteon-audit-memory = { path = "crates/audit/memory" }
acteon-audit-postgres = { path = "crates/audit/postgres" }
acteon-audit-clickhouse = { path = "crates/audit/clickhouse" }
acteon-audit-elasticsearch = { path = "crates/audit/elasticsearch" }

# Rules frontends
acteon-rules = { path = "crates/rules/rules" }
acteon-rules-yaml = { path = "crates/rules/yaml" }
acteon-rules-cel = { path = "crates/rules/cel" }

# LLM
acteon-llm = { path = "crates/llm" }

# Embedding
acteon-embedding = { path = "crates/embedding" }

# Integrations
acteon-email = { path = "crates/integrations/email" }
acteon-slack = { path = "crates/integrations/slack" }
acteon-pagerduty = { path = "crates/integrations/pagerduty" }
acteon-webhook = { path = "crates/integrations/webhook" }

# Parsing
nom = "7"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt", "io"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"

# Async traits
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# Error handling
thiserror = "2"

# Observability
tracing = "0.1"

# Time & IDs
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Bytes
bytes = "1"

# Concurrent data structures
dashmap = "6"
moka = { version = "0.12", features = ["future"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "script"] }
deadpool-redis = "0.18"

# DynamoDB
aws-sdk-dynamodb = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# PostgreSQL
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# ClickHouse
clickhouse = "0.13"

# Email / SMTP
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Regex
regex = "1"

# JSON patching
json-patch = "3"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# OpenAPI / Swagger
utoipa = { version = "5", features = ["chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0.2"

# File watching
notify = "7"

# Configuration
toml = "0.8"
clap = { version = "4", features = ["derive"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
aes-gcm = "0.10"
base64 = "0.22"
secrecy = { version = "0.8", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# Tracing subscriber
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

# Testing
axum-test = "16"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
