[package]
name = "acteon-core"
description = "Core types and shared abstractions for the Acteon action gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
