[package]
name = "acteon-executor"
description = "Action executor with retry logic, backoff, and concurrency limits for Acteon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acteon-core = { workspace = true }
acteon-provider = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
