[package]
name = "acteon-rules-cel"
description = "CEL expression frontend for Acteon rules"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acteon-rules = { workspace = true }
nom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }

[dev-dependencies]
acteon-core = { workspace = true }
acteon-state = { workspace = true }
acteon-state-memory = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
