[package]
name = "acteon-server"
description = "Standalone HTTP server for the Acteon action gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "acteon_server"
path = "src/lib.rs"

[[bin]]
name = "acteon-server"
path = "src/main.rs"

[dependencies]
acteon-audit = { workspace = true }
acteon-audit-memory = { workspace = true }
acteon-audit-postgres = { workspace = true }
acteon-audit-clickhouse = { workspace = true }
acteon-audit-elasticsearch = { workspace = true }
acteon-core = { workspace = true, features = ["openapi"] }
acteon-state = { workspace = true }
acteon-state-memory = { workspace = true }
acteon-state-redis = { workspace = true }
acteon-state-postgres = { workspace = true }
acteon-state-dynamodb = { workspace = true }
acteon-state-etcd = { workspace = true }
acteon-state-clickhouse = { workspace = true }
acteon-rules = { workspace = true }
acteon-rules-yaml = { workspace = true }
acteon-provider = { workspace = true }
acteon-executor = { workspace = true }
acteon-gateway = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-axum = { workspace = true }

[dev-dependencies]
acteon-audit = { workspace = true }
acteon-audit-memory = { workspace = true }
axum-test = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
