[package]
name = "acteon-cli"
description = "Command-line interface for the Acteon action gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "acteon"
path = "src/main.rs"

[dependencies]
acteon-ops = { workspace = true }
acteon-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

[lints]
workspace = true
