[package]
name = "acteon-core"
description = "Core types and shared abstractions for the Acteon action gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
openapi = ["utoipa"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
croner = { workspace = true }
utoipa = { workspace = true, optional = true }

[lints]
workspace = true
