[package]
name = "acteon-gateway"
description = "Action gateway pipeline orchestration for Acteon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acteon-audit = { workspace = true }
acteon-core = { workspace = true }
acteon-llm = { workspace = true }
acteon-state = { workspace = true }
acteon-state-memory = { workspace = true }
acteon-rules = { workspace = true }
acteon-provider = { workspace = true }
acteon-executor = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
json-patch = { workspace = true }
notify = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
parking_lot = "0.12"
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
acteon-rules-yaml = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }

[[bench]]
name = "dispatch"
harness = false

[[example]]
name = "basic"
required-features = []

[[example]]
name = "multi_provider"
required-features = []

[lints]
workspace = true
